--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,7 @@ body {
   font-weight: 500;
   line-height: 24px;
   letter-spacing: 0.64px;
+  cursor: pointer;
 }
 
 /* End of General Styles */
@@ -225,6 +226,7 @@ body {
   font-weight: 500;
   line-height: 24px;
   letter-spacing: 0.64px;
+  cursor: pointer;
 }
 
 .buttons-item-button {
