--- a/css/styles.css
+++ b/css/styles.css
@@ -209,3 +209,10 @@ body {
   line-height: 2;
   letter-spacing: 0.06em;
 }
+
+.project .type {
+  color: var(--slate);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.87;
+}
